Apply suggestions from code review
Co-Authored-By: Scott Addie <10702007+scottaddie@users.noreply.github.com>

--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -537,7 +537,7 @@
       uid: grpc/basics
     - name: gRPC services with ASP.NET Core
       uid: grpc/aspnetcore
-    - name: Calling gRPC services with .NET client
+    - name: Call gRPC services with .NET client
       uid: grpc/client
     - name: gRPC client factory integration
       uid: grpc/clientfactory
@@ -547,7 +547,7 @@
       uid: grpc/authn-and-authz
     - name: Security considerations
       uid: grpc/security
-    - name: Migrating gRPC services from C Core
+    - name: Migrate gRPC services from C Core
       uid: grpc/migration
     - name: Comparing gRPC services with HTTP APIs
       uid: grpc/comparison
